Completed but need refactoring

--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
 
     <div class="send_note_container">
       <p>Add a note in the connection request</p>
-      <textarea type="text" id="send_note" class="send_note" placeholder="Hi ${name}, I'm interested in connecting with you to learn more about employment opportunities in Software Engineer role. I believe my skills and experience could be valuable for developer role in your esteemed organisation. Looking forward to connecting with you."></textarea>
+      <textarea type="text" id="send_note" class="send_note">"Hi ${name}, I'm interested in connecting with you to learn more about employment opportunities in Software Engineer role. I believe my skills and experience could be valuable for developer role in your esteemed organisation. Looking forward to connecting with you."</textarea>
     </div>
     
     <div class="howDoYouKnow">
